<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutToolbar"
        layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutToolbar"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_15sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tvDescLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="Description:"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintLeft_toLeftOf="@+id/guidelineBegin"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/disc_conn_desc"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintLeft_toRightOf="@+id/tvDescLabel"
                app:layout_constraintRight_toRightOf="@+id/guidelineEnd"
                app:layout_constraintTop_toTopOf="@+id/tvDescLabel" />

            <TextView
                android:id="@+id/tvMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/mode"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

            <RadioGroup
                android:id="@+id/radioGroupMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/tvMode">

                <RadioButton
                    android:id="@+id/radioBtnFirstDiscovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/connect_to_first_discovered_device"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <RadioButton
                    android:id="@+id/radioBtnSpecificDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/connect_to_spec_device"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="visible" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvTitleTimeoutInSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/timeout"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="@+id/edtTimeout"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toTopOf="@+id/edtTimeout" />

            <EditText
                android:id="@+id/edtTimeout"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:hint="00"
                android:inputType="number"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupMode" />

            <TextView
                android:id="@+id/tvKnownDevices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/known_devices"
                android:textColor="@color/blue"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTimeout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvKnownDevices"
                android:layout_width="0dp"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/gray_border_stroke"
                android:orientation="vertical"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/tvKnownDevices"
                tools:listitem="@layout/adapter_known_devices" />


            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tvKnownDevices,rvKnownDevices" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBegin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_gradient"
                android:fontFamily="@font/roboto_medium"
                android:letterSpacing="0"
                android:text="Initiate Discover and Connect"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/rvKnownDevices"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>